fixed an issue relating to AOS which caused there to be a white bar down the side of the screen. Added .container-fluid {overflow-x: hidden;} to the style of the container-fluid and appears to have fixed it

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -52,14 +52,7 @@
 }
 
 .second-part {
-  font-size: 12px;
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  color: #f4f4f4
-}
-
-.second-part {
+  text-align: right;
   font-size: 12px;
   position: absolute;
   bottom: 0px;
