--- a/app/assets/stylesheets/components/_homepage.scss
+++ b/app/assets/stylesheets/components/_homepage.scss
@@ -98,3 +98,7 @@
   align-items: center;
   margin-top: 20px;
 }
+
+.container-fluid {
+  overflow-x: hidden;
+}
